--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -24,7 +24,7 @@
     <header>
         <div class="header-container">
             <div class="back_button">
-                <a href="#"><img src="assets/Back_Button.png" alt="Back button"></a>
+                <a href="#"><img src="../assets/Back_Button.png" alt="Back button"></a>
             </div>
             <div class="logo">
                 <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
@@ -81,5 +81,6 @@
     <footer>
         <p>Copyright©</p>
     </footer>
+    <script src="../js/jacket-specific-page.js"></script>
 </body>
 </html>
