--- a/html/contact.html
+++ b/html/contact.html
@@ -43,29 +43,44 @@
     </header>
     <main class="main-content contact">
         <h1>Contact Us</h1>
-        <form method="post">
+            <div class="contact-us-success">
+                <p>Message has successfully been sent.</p>
+                <a href="../html/gender-selection.html" class="cta continue-shopping_button">Continue shopping</a>
+            </div>
             <div class="forms-container"> 
-                <form method="POST">               
+                <form id="contact-form" method="POST">               
                     <section class="name-email">
-                    <label for="name">Full name</label>
-                    <input type="text" id="name" name="name">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email">
-                    <div>
-                        <input type="checkbox" name="newsletter" id="newsletter">
-                        <label for="newsletter">Sign up for our newsletter.</label>
-                    </div>
+                        <div>
+                            <label for="name">Full name</label>
+                            <input type="text" id="name" name="name">
+                            <div class="form-error-message" id="fullNameError">
+                                Please enter your full name
+                            </div>
+                        </div>
+                        <div>
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" name="email">
+                            <div class="form-error-message" id="emailError">
+                                E-mail address is not valid
+                            </div>
+                        </div>
+                        <div class="checkbox">
+                            <input type="checkbox" name="newsletter" id="newsletter">
+                            <label for="newsletter">Sign up for our newsletter.</label>
+                        </div>
+                        <div class="message">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="6" cols="30"></textarea>
+                            <div class="form-error-message" id="messageError">Message must be at least 10 characters</div>
+                        </div>
                     </section>
-                    <section class="message">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="6" cols="30"></textarea>
-                        <input type="submit" value="Send" class="cta cta-send">
-                    </section>
+                    <button type="submit" id="submitButton" class="cta cta-send">Submit</button>
                 </form>
             </div>
     </main>
     <footer>
         <p>Copyright©</p>
     </footer>
+    <script src="../js/contact.js"></script>
 </body>
 </html>
