--- a/html/contact.html
+++ b/html/contact.html
@@ -81,7 +81,7 @@
                             <div class="form-error-message" id="messageError">Message must be at least 10 characters</div>
                         </div>
                     </section>
-                    <button type="submit" id="submitButton" class="cta cta-send">Submit</button>
+                    <button type="submit" id="submitButton" class="cta cta-send" alt="Submit button">Submit</button>
                 </form>
             </div>
     </main>
