Finished course assignment

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -137,6 +137,8 @@
                     <div class="checkbox">
                         <input type="checkbox" name="newsletter" id="newsletter">
                         <label for="newsletter">Sign up for our newsletter.</label>
+                    </div>
+                    <div>
                         <button type="button" class="cta checkout-nav" alt="Card information button">Next: Card information</button>
                     </div>
                 </div>
