--- a/html/contact.html
+++ b/html/contact.html
@@ -42,9 +42,9 @@
         </nav>
     </header>
     <main class="main-content contact">
-        <h1>Contact Us</h1>
+        <h1 id="contact-us_header">Contact Us</h1>
             <div class="contact-us-success">
-                <p>Message has successfully been sent.</p>
+                <p>Your message has successfully been sent.</p>
                 <a href="../html/gender-selection.html" class="cta continue-shopping_button">Continue shopping</a>
             </div>
             <div class="forms-container"> 
