Small tweak to add to cart-button

--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -55,7 +55,7 @@
                 Lightweight and sporty for varied use. 
                 The jacket is produced sustainably in our local factories, using reusable material.</p>    
                 <p class="price">Price: <span>£99.00</span></p> 
-                <a href="#" class="cta add-to-cart_button">Add to Cart</a>
+                <a class="cta add-to-cart_button">Add to Cart</a>
                 <a href="../html/checkout.html" class="cta buy-now_button">Buy Now</a>
             </div>
         </div>
