added products from Api

--- a/html/jackets-men.html
+++ b/html/jackets-men.html
@@ -124,5 +124,6 @@
         <footer>
             <p>Copyright©</p>
         </footer>
+        <script src="../js/jackets.js"></script>
     </body>
 </html>
