Added query string parameters for jacket specific page

--- a/html/jackets-women.html
+++ b/html/jackets-women.html
@@ -47,7 +47,7 @@
                 <h2>Women</h2>
             </section>
             <section class="main-content product-list">
-                <div class="products">
+                <!-- <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed_image" alt="Jacket model 01"></a>
                     <h3>Jacket 01</h3>
                     <p class="price">Price: £99.00</p>
@@ -118,12 +118,13 @@
                     <h3>Jacket 12</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
-                </div>
+                </div> -->
             </section>
         </main>
         <footer>
             <p>Copyright©</p>
         </footer>
-        <script src="../js/jackets.js"></script>
+        <script src="../js/script.js"></script>
+        <script src="../js/jackets-women.js"></script>
     </body>
 </html>
