--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -42,7 +42,10 @@
         </nav>
     </header>
     <main>
-        <section class="main-headings">
+        <div class="product-container">
+
+        </div>
+        <!-- <section class="main-headings">
             <h1>Jacket model 01</h1>
         </section>
         <div class="main-content jacket-specific-container">
@@ -58,8 +61,8 @@
                 <a class="cta add-to-cart_button">Add to Cart</a>
                 <a href="../html/checkout.html" class="cta buy-now_button">Buy Now</a>
             </div>
-        </div>
-        <section class="main-content similar-items-container">
+        </div> -->
+        <!-- <section class="main-content similar-items-container">
             <h2>Similar items:</h2>
             <div class="similar-items">
                 <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_02.jpg" class="similar-items_image" alt="jacket model 02"><h3>Jacket model 02</h3><p class="similar-items_price">Price: £99.00</p></a>
@@ -76,11 +79,14 @@
             <div class="similar-items">
                 <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_06.jpg" class="similar-items_image" alt="jacket model 06"><h3>Jacket model 06</h3><p class="similar-items_price">Price: £99.00</p></a>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <p>Copyright©</p>
     </footer>
+    <script src="../js/script.js"></script>
+    <script src="../js/jackets-men.js"></script>
+    <script src="../js/jackets-women.js"></script>
     <script src="../js/jacket-specific-page.js"></script>
 </body>
 </html>
