--- a/html/jackets-men.html
+++ b/html/jackets-men.html
@@ -24,7 +24,7 @@
         <header>
             <div class="header-container">
                 <div class="back_button">
-                    <a href="#"><img src="assets/Back_Button.png" alt="Back button"></a>
+                    <a href="#"><img src="../assets/back-button.png" alt="Back button"></a>
                 </div>
                 <div class="logo">
                     <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
@@ -47,6 +47,7 @@
                 <h2>Men</h2>
             </section>
             <section class="main-content product-list">
+                <div class="loader-indicator"></div>
                 <!-- <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_01.jpg" class="jackets-listed_image" alt="Jacket model 01"></a>
                     <h3>Jacket 01</h3>
@@ -125,6 +126,7 @@
             <p>Copyright©</p>
         </footer>
         <script src="../js/script.js"></script>
+        <script src="../js/components/displayError.js"></script>
         <script src="../js/jackets-men.js"></script>
     </body>
 </html>
