--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -7,7 +7,7 @@
     <link href="../css/styles.css" rel="stylesheet">
     <link href="../css/jacket-specific-page.css" rel="stylesheet">
     <link href="../css/media.css" rel="stylesheet">
-    <title>Rainydays | Jacket model 01</title>
+    <title class="title-container">#</title>
     <!-- Hotjar Tracking Code for https://nervous-payne-c9f417.netlify.app/ -->
     <script>
         (function(h,o,t,j,a,r){
@@ -24,7 +24,7 @@
     <header>
         <div class="header-container">
             <div class="back_button">
-                <a href="#"><img src="../assets/Back_Button.png" alt="Back button"></a>
+                <a href="#"><img src="../assets/back-button.png" alt="Back button"></a>
             </div>
             <div class="logo">
                 <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
@@ -41,9 +41,13 @@
             </ul>
         </nav>
     </header>
+    
     <main>
         <div class="product-container">
+            <div class="loader-indicator"></div>
+            <div class="info-container">
 
+            </div>
         </div>
         <!-- <section class="main-headings">
             <h1>Jacket model 01</h1>
@@ -84,9 +88,7 @@
     <footer>
         <p>Copyright©</p>
     </footer>
-    <script src="../js/script.js"></script>
-    <script src="../js/jackets-men.js"></script>
-    <script src="../js/jackets-women.js"></script>
+    <script src="../js/components/displayError.js"></script>
     <script src="../js/jacket-specific-page.js"></script>
 </body>
 </html>
