--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -46,9 +46,9 @@
         <div class="product-container">
             <div class="loader-indicator"></div>
             <div class="info-container">
-
             </div>
         </div>
+        <div class="info"></div>
         <!-- <section class="main-headings">
             <h1>Jacket model 01</h1>
         </section>
